--- a/MacOSTouchBar/Info.plist
+++ b/MacOSTouchBar/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2020 久松由幸. All rights reserved.</string>
+	<string>Copyright © 2020 YoshiyukiHisamatsu. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
